feat: adding environmental variables and fixig some issues